@@ -462,10 +462,9 @@ name|getPartCols
 argument_list|()
 control|)
 block|{
-name|pvals
-operator|.
-name|add
-argument_list|(
+name|String
+name|val
+init|=
 name|partSpec
 operator|.
 name|get
@@ -475,6 +474,27 @@ operator|.
 name|getName
 argument_list|()
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|val
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|HiveException
+argument_list|(
+literal|"partition spec is invalid. field.getName() does not exist in input."
+argument_list|)
+throw|;
+block|}
+name|pvals
+operator|.
+name|add
+argument_list|(
+name|val
 argument_list|)
 expr_stmt|;
 block|}
