@@ -1719,6 +1719,9 @@ argument_list|)
 operator|.
 name|getText
 argument_list|()
+operator|.
+name|toLowerCase
+argument_list|()
 argument_list|)
 argument_list|,
 name|val
